--- a/docs/mas-recursos/05_bajar-google-drive.Rmd
+++ b/docs/mas-recursos/05_bajar-google-drive.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Bajar ficheros de Google Drive"
 author: "Pedro J. Pérez"
-date: "2/10/2020"
+date: "`r Sys.Date()`"  
 output: html_document
 ---
 
@@ -27,12 +27,13 @@ library(googledrive)  #-install.packages("googledrive")
 # aa <- drive_find(n_max = 30)
 # x <- drive_get(id = "....")
 
-file_to_download <- "entrega_01.zip"
+file_to_download <- "clase_01.zip"
 aa <- drive_get(file_to_download)
 
 drive_download(file_to_download, path = file_to_download)
 unzip(zipfile = file_to_download)
 
 ```
+
 
 
