--- a/04-tutoriales.Rmd
+++ b/04-tutoriales.Rmd
@@ -46,9 +46,9 @@ output:
 
 - [`Tutorial 08: Tablas con Rmarkdown`](./tutoriales/tt_08_tablas-Rmarkdown.html){target="_blank"}. 
 
-- [`Tutorial 09: Introducción a GIS con R`](./tutoriales/tt_09_GIS-con-R.html){target="_blank"}. 
+- [`Tutorial 09: Introducción a GIS con R (WIP)`](./tutoriales/tt_09_GIS-con-R.html){target="_blank"}. 
 
-- [`Tutorial 10: Un poco de EDA y modelos`](./tutoriales/tt_10_EDA-con-R.html){target="_blank"}. 
+- [`Tutorial 10: Un poco de EDA y modelos (WIP)`](./tutoriales/tt_10_EDA-con-R.html){target="_blank"}. 
 
 
 
