--- a/02-logistica.Rmd
+++ b/02-logistica.Rmd
@@ -38,24 +38,26 @@ output:
 
 - [**`Etherpad`**](https://etherpad.wikimedia.org/p/curso_intro_DS_UV){target="_blank"}: durante el curso escribiremos código R. Esta etherpad nos permitirá compartir el código.
 
-- [**`Jitsi link to make e-meetings`**](https://meet.jit.si/intro-to-DS_UV_2020-21){target="_blank"}: Una room de Jitsi para hacer reuniones online. Seguramente la utilizaré para las tutorías online.
-
-
 - [**`Uploader`**](https://driveuploader.com/upload/x1Qx7fev79/){target="_blank"}: Un servicio que utilizaré para recoger vuestros trabajos. Ya os diré como funciona. Lo abriré cuando tenga que recoger trabajos.
 
+- [**`Wiki del curso`**](https://github.com/perezp44/intro-ds-21-22-web-companion/wiki){target="_blank"}: una wiki asociada al curso para hacer unos apuntes colaborativos y registrar las erratas que vayáis encontrando en los materiales del curso. 
 
-- [**`Cuestionario de Google`**](https://forms.gle/kvrZbuw6XtRDhki98){target="_blank"}: Generalmente recogeré los trabajos con el `uploader` o por mail, pero esa función también podría hacerla este cuestionario.
+- [**`Foros del curso`**](https://github.com/perezp44/intro-ds-21-22-web-companion/discussions){target="_blank"}: un espacio par resolver preguntas sobre el curso y las tareas para casa. 
+
+- [**`Jitsi link to make e-meetings`**](https://meet.jit.si/intro-to-DS_UV_2020-21){target="_blank"}: Una room de Jitsi para hacer reuniones online. Seguramente la utilizaremos para las tutorías online.
 
 
 <br>
 
-Estos 3 últimos es fácil que los usemos menos, pero per si de cas, aquí están:
+Estos 2 últimos es fácil que los usemos menos, pero per si de cas, aquí están:
 
 
 - [**`RStudio Cloud Project`**](https://rstudio.cloud/project/1543128){target="_blank"}: El año pasado este recurso nos resulto muy útil, pero ahora la versión gratuita tiene límite de tiempo, aunque de momento yo sí lo estoy usando para dar clase en el aula.
 
 
-- [**`Apuntes colaborativos en HackMD`**](https://hackmd.io/mLBp682ZTaWWKgN-gk35qg){target="_blank"}: para hacer apuntes colaborativos. Es como Google Docs pero en MD. Veremos si al final lo usamos, aún lo estoy probando. De momento la gente no se anima. la verdad es que lo he incentivado poco, bueno nada. Igual debería incentivarlo: se aprende mucho haciendo apuntes en común.
+- [**`Cuestionario de Google`**](https://forms.gle/kvrZbuw6XtRDhki98){target="_blank"}: Generalmente recogeré los trabajos con el `uploader` o por mail, pero esa función también podría hacerla este cuestionario.
+
+
 
 - [**`Página del curso en Piazza`**](https://piazza.com/uv.es/fall2020/36494/home){target="_blank"}: es una plataforma que se  usa en muchos cursos para resolver cuestiones y "colaborar" en la resolución de tareas. Ya veremos si acabamos usándolo.
 
