--- a/index.Rmd
+++ b/index.Rmd
@@ -52,7 +52,7 @@ En la web encontrarás información acerca del desarrollo del curso, así como l
 
 <br>
 
-<div class = "gris-gainboro">
+<div class = "blue">
 
 <center>  **Insisto!!!**, </center>
 <center> lee la [`Guía del curso`](01-guia-del-curso.html)  </center>
