--- a/06-mas-cosas.Rmd
+++ b/06-mas-cosas.Rmd
@@ -27,36 +27,16 @@ klippy::klippy(position = c("top", "right")) #- remotes::install_github("rlesur/
 ```
 
 
-<br><br>
-
-## Recursos
-
--------------------
-
-
-- [Guía de Instalación de R y RStudio](./mas-recursos/01_instrucciones-instalacion.html){target="_blank"}
-
-- [Listado de paquetes a instalar](./mas-recursos/02_paquetes-a-instalar.R)
-
-- [Intrucciones de entrega de las tareas de la evaluación continua](./mas-recursos/04_como-entregar-las-tareas-uploader.html){target="_blank"}
-
-- [Descargar ficheros de Google Drive](./mas-recursos/05_bajar-google-drive.html){target="_blank"}. Este fichero es solo para mi. Para usarlo en el aula.
-
-
 <br>
 
-## Ejemplos
+### **Guiones de clase**
 
--------------------
+------------------------------
 
-Los ejemplos y casos que hagamos durante el curso muchas veces provendrán de los propios tutoriales.
-
-Durante el curso he de evaluaros, así que muchos de los ejemplos nuevos os los facilitaré cuando hagamos las pruebas, ya sean estas en casa o en el aula.
-
-Además, en clase vamos a usar cada sesión un Rproject con ejemplos: son los guiones de clase
+En cada sesión/clase vamos a usar un Rproject con ejemplos y alguna cosa más: son los **guiones de clase**
 
 
-Para descargaros el Rproject con los ejemplos de cada sesión tienes que ejecutar en RStudio las siguientes instrucciones:
+Para descargaros el Rproject con el guión de cada sesión tienes que ejecutar en RStudio las siguientes instrucciones:
 
 ```{r, eval = FALSE}
 file_to_download <- "clase_01.zip" 
@@ -67,6 +47,38 @@ file.remove(file_to_download)
 ```
 
 No hace falta que lo hagas ahora, mejor si te esperas al primer día de clase, os lo explico un poco más y lo hacemos todos juntos.
+
+
+La mayoría de ejemplos/casos que trabajaremos durante el curso estarán alojados en los guiones de clase, otros provendrán de los propios tutoriales o slides.
+
+
+<br>
+
+### **Tareas para relizar en casa/clase**
+
+-------------------
+
+
+Durante el curso he de evaluaros, lo haré con tareas/ejemplos nuevos, que os facilitaré cuando hagamos las pruebas, ya sean estas en casa o en el aula.
+
+- [Intrucciones de entrega de las tareas de la evaluación continua](./mas-recursos/04_como-entregar-las-tareas-uploader.html){target="_blank"}
+
+
+<br>
+
+### **Otros recursos**
+
+-------------------
+
+
+- [Guía de Instalación de R y RStudio](./mas-recursos/01_instrucciones-instalacion.html){target="_blank"}
+
+- [Listado de paquetes a instalar](./mas-recursos/02_paquetes-a-instalar.R)
+
+- [Descargar ficheros de Google Drive](./mas-recursos/05_bajar-google-drive.html){target="_blank"}. Este fichero es solo para mi. Para usarlo en el aula.
+
+
+
 
 <br><br>
 
