--- a/02-logistica.Rmd
+++ b/02-logistica.Rmd
@@ -33,31 +33,31 @@ output:
 
 ##### Los que usaremos más
 
-- [**`Etherpad`**](https://etherpad.wikimedia.org/p/curso_intro_DS_UV){target="_blank"}: durante el curso escribiremos código R. Esta etherpad nos permitirá compartir el código.
+- [**Etherpad**](https://etherpad.wikimedia.org/p/curso_intro_DS_UV){target="_blank"}: durante el curso escribiremos código R. Esta etherpad nos permitirá compartir el código.
 
-- [**`Foros del curso`**](https://github.com/perezp44/intro-ds-21-22-web-companion/discussions){target="_blank"}: un espacio par resolver preguntas sobre el curso y las tareas para casa. 
+- [**Foros del curso**](https://github.com/perezp44/intro-ds-21-22-web-companion/discussions){target="_blank"}: un espacio par resolver preguntas sobre el curso y las tareas para casa. 
 
-- [**`Wiki del curso`**](https://github.com/perezp44/intro-ds-21-22-web-companion/wiki){target="_blank"}: una wiki asociada al curso para hacer unos apuntes colaborativos y registrar las erratas que vayáis encontrando en los materiales del curso. 
+- [**Wiki del curso**](https://github.com/perezp44/intro-ds-21-22-web-companion/wiki){target="_blank"}: una wiki asociada al curso para hacer unos apuntes colaborativos y registrar las erratas que vayáis encontrando en los materiales del curso. 
 
 
 ##### Para recoger las tareas
 
-- [**`Uploader`**](https://driveuploader.com/upload/x1Qx7fev79/){target="_blank"}: Un servicio que utilizaré para recoger vuestros trabajos. Ya os diré como funciona. Lo abriré cuando tenga que recoger trabajos.
+- [**Uploader**](https://driveuploader.com/upload/x1Qx7fev79/){target="_blank"}: Un servicio que utilizaré para recoger vuestros trabajos. Ya os diré como funciona. Lo abriré cuando tenga que recoger trabajos.
 
-- [**`Cuestionario de Google`**](https://forms.gle/kvrZbuw6XtRDhki98){target="_blank"}: Generalmente recogeré los trabajos con el `uploader` o por mail, pero esa función también podría hacerla este cuestionario.
+- [**Cuestionario de Google**](https://forms.gle/kvrZbuw6XtRDhki98){target="_blank"}: Generalmente recogeré los trabajos con el `uploader` o por mail, pero esa función también podría hacerla este cuestionario.
 
 ##### Sitio oficial de la asignatura en Aula Virtual
 
 
-- [**`Aula Virtual de la asignatura`**](https://aulavirtual.uv.es/course/view.php?id=29740){target="_blank"}: como Aula Virtual es el sitio oficial de la asignatura colgaré allí los anuncios de tipo "oficial". También colgaré en Aula Virtual los detalles sobre la evaluación. Además, si hiciera falta, allí podemos organizar reuniones virtuales a través de BBC (Black Board Collaborate).
+- [**Aula Virtual de la asignatura**](https://aulavirtual.uv.es/course/view.php?id=29740){target="_blank"}: como Aula Virtual es el sitio oficial de la asignatura colgaré allí los anuncios de tipo "oficial". También colgaré en Aula Virtual los detalles sobre la evaluación. Además, si hiciera falta, allí podemos organizar reuniones virtuales a través de BBC (Black Board Collaborate).
 
 
 ##### Fácil que los usemos menos, pero per si de cas, aquí están:
 
-- [**`RStudio Cloud Project`**](https://rstudio.cloud/project/1543128){target="_blank"}: El año pasado este recurso nos resulto muy útil, pero ahora la versión gratuita tiene límite de tiempo, aunque de momento yo sí lo estoy usando para dar clase en el aula.
+- [**RStudio Cloud Project**](https://rstudio.cloud/project/1543128){target="_blank"}: El año pasado este recurso nos resulto muy útil, pero ahora la versión gratuita tiene límite de tiempo, aunque de momento yo sí lo estoy usando para dar clase en el aula.
 
 
-- [**`Jitsi link to make e-meetings`**](https://meet.jit.si/intro-to-DS_UV_2020-21){target="_blank"}: Una room de Jitsi para hacer reuniones online. Seguramente la utilizaremos para las tutorías online.
+- [**Jitsi link to make e-meetings**](https://meet.jit.si/intro-to-DS_UV_2020-21){target="_blank"}: Una room de Jitsi para hacer reuniones online. Seguramente la utilizaremos para las tutorías online.
 
 
 
@@ -70,12 +70,12 @@ output:
 ------------------
 
 
-- [**`Tutoriales`**](04-tutoriales.html) : digamos que son los apuntes/libro oficial del curso. Tenéis que ir leyéndolos poco a poco. Algunas de las tareas a hacer en casa consistirán en leer secciones de estos tutoriales. Los puedes encontrar en la sección `Tutoriales` de esta misma web.
+- [**Tutoriales**](04-tutoriales.html) : digamos que son los apuntes/libro oficial del curso. Tenéis que ir leyéndolos poco a poco. Algunas de las tareas a hacer en casa consistirán en leer secciones de estos tutoriales. Los puedes encontrar en la sección `Tutoriales` de esta misma web.
 
-- [**`Transparencias`**](05-slides.html) : las transparencias (o slides) que usaré para dar clase. Las puedes encontrar en la sección `Slides` de esta misma web.
+- [**Transparencias**](05-slides.html) : las transparencias (o slides) que usaré para dar clase. Las puedes encontrar en la sección `Slides` de esta misma web.
 
 
-- [**`Guiones de clase/Ejemplos/Ejercicios`**](06-mas-cosas.html):  iré colgando conforme avancen las clases.
+- [**Guiones de clase/Ejemplos/Ejercicios**](06-mas-cosas.html):  iré colgando conforme avancen las clases.
 
 
 
