--- a/docs/mas-recursos/04_como-entregar-las-tareas-uploader.Rmd
+++ b/docs/mas-recursos/04_como-entregar-las-tareas-uploader.Rmd
@@ -4,8 +4,9 @@ author: "Pedro J. Pérez"
 date: "`r Sys.Date()`"  
 output:
   html_document: 
-    theme: sandstone
-    highlight: kate
+    css: assets/styles_pjp.css
+    theme: flatly
+    highlight: textmate
     toc: yes
     toc_float: yes
 ---
