--- a/mas-recursos/01_instrucciones-instalacion.Rmd
+++ b/mas-recursos/01_instrucciones-instalacion.Rmd
@@ -4,6 +4,7 @@ author: "Pedro J. Pérez"
 date: "`r Sys.Date()`"  
 output:
   html_document:
+    css: assets/styles_pjp.css
     theme: flatly
     highlight: textmate 
     self_contained: yes
