--- a/07-trabajos.Rmd
+++ b/07-trabajos.Rmd
@@ -55,7 +55,7 @@ klippy::klippy(position = c("top", "right")) #- remotes::install_github("rlesur/
 
 
 <div class = "blue">
-<center>[Aquí](https://perezp44.github.io/intro-ds-20-21-web/07-trabajos.html) puedes ver los trabajos de los estudiantes del curso pasado.</center>
+<center>[Aquí](https://perezp44.github.io/intro-ds-20-21-web/07-trabajos.html){target="_blank"} puedes ver los trabajos de los estudiantes del curso pasado.</center>
 </div>
 
 
