--- a/07-trabajos.Rmd
+++ b/07-trabajos.Rmd
@@ -35,9 +35,9 @@ klippy::klippy(position = c("top", "right")) #- remotes::install_github("rlesur/
 
 ------------------
 
+Aquí irán los enlaces a vuestros trabajos en equipo.
 
 <br>
-
 
 
 <br><br>
@@ -46,8 +46,11 @@ klippy::klippy(position = c("top", "right")) #- remotes::install_github("rlesur/
 
 ------------------
 
+Aquí irán los enlaces a vuestros trabajos individuales.
 
 <br>
+
+
 
 <br><br>
 
@@ -55,7 +58,8 @@ klippy::klippy(position = c("top", "right")) #- remotes::install_github("rlesur/
 
 
 <div class = "blue">
-<center>[Aquí](https://perezp44.github.io/intro-ds-20-21-web/07-trabajos.html){target="_blank"} puedes ver los trabajos de los estudiantes del curso pasado.</center>
+<center>[Aquí](https://perezp44.github.io/intro-ds-20-21-web/07-trabajos.html){target="_blank"} puedes ver los trabajos de los estudiantes del curso pasado. Por ejemplo [este](https://nosan5.github.io/trabajo_BigData_equipo/){target="_blank"}. </center>
+
 </div>
 
 
