--- a/02-logistica.Rmd
+++ b/02-logistica.Rmd
@@ -37,7 +37,7 @@ output:
 
 - [**Foros del curso**](https://github.com/perezp44/intro-ds-21-22-web-companion/discussions){target="_blank"}: un espacio para resolver preguntas sobre el curso y las tareas para casa. 
 
-- [**Wiki del curso**](https://github.com/perezp44/intro-ds-21-22-web-companion/wiki){target="_blank"}: una wiki asociada al curso para hacer unos apuntes colaborativos y registrar las erratas que vayáis encontrando en los materiales del curso. 
+- [**Wiki del curso**](https://github.com/perezp44/intro-ds-21-22-web-companion/wiki){target="_blank"}: una wiki asociada al curso para hacer unos **apuntes colaborativos** y [registrar las erratas](https://github.com/perezp44/intro-ds-21-22-web-companion/wiki/Erratas){target="_blank"} que vayáis encontrando en los materiales del curso. 
 
 
 ##### Para recoger las tareas
